Improved Documentation, Null guarding implemented on creation sites.